<resources>
    <string name="app_name">ad340_mainapp</string>
    <string name="action_settings">Settings</string>
    <string name="home_page_title">Zach\'s Main App</string>
    <string name="home_page_intro">Hi there, my name is Zachary Daniels.</string>
    <string name="home_page_activity">Here are some of my favorite activities:</string>
    <string name="activities">\u2022 Board games\n\u2022 Hiking\n\u2022 Pub trivia
    \n\u2022 Movies\n\u2022 Working out</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="message_title">Message Page</string>
    <string name="button_movies">Movies</string>
    <string name="button_cameras">Cameras</string>
    <string name="button_map">Map</string>
    <string name="button4">Button 4</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="title_movie_list">Zombie Movies</string>
    <string name="about_title">About</string>
    <string name="about_header">Zach Daniels</string>
    <string name="about_class">AD 340</string>
    <string name="about_desc">This is my quarter-long Mobile Development project. There\'s not much
    to it right now, but that should change soon!</string>
    <string name="menu_action_setting">Setting</string>
    <string name="menu_action_about_us">About us</string>
    <string name="nav_about">About</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="saved_message">valid_entry</string>
    <string name="camera_name_view">Name</string>
    <string name="camera_title">Traffic Cameras</string>
    <string name="map_title">Cameras on Map</string>
    <string name="window_street_name">Street</string>
</resources>
